--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "better-sqlite3": "^9.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "drizzle-orm": "^0.28.6",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
