--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.2.7",
+    "@nestjs/websockets": "^10.2.7",
     "better-sqlite3": "^9.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "drizzle-orm": "^0.28.6",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
